Fix card flip on Safari

--- a/css/gallery_style.css
+++ b/css/gallery_style.css
@@ -76,7 +76,7 @@ p, h2, ol {
 		font-size: 1.25em;
 	}
 
-	/*Flip card reference for lines 107-145: https://www.w3schools.com/howto/howto_css_flip_card.asp */
+	/*Flip card reference for lines 80-118: https://www.w3schools.com/howto/howto_css_flip_card.asp */
 	.flip-card {
 		background-color: transparent;
 		width: 217px;
@@ -102,6 +102,7 @@ p, h2, ol {
 		position: absolute;
 		width: 100%;
 		height: 100%;
+		-webkit-backface-visibility: hidden;
 		backface-visibility: hidden;
 	}
 
